--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/validator": "^13.7.10",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.3",
     "mongoose": "^6.7.2",
     "nest-mongoose": "^1.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -39,6 +43,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
